--- a/GeneratorQR/Olympia/templates/guide.html
+++ b/GeneratorQR/Olympia/templates/guide.html
@@ -3,13 +3,20 @@
 <head>
     <meta charset="IBM868">
     <title>Guide</title>
-    <link rel="stylesheet" href="css/guide_style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-
-<h1>The guide</h1>
-<h3>Step 1: paste the data you want to code into the field on the next page</h3>
-<h3>Step 2: click on "Generate" button and enjoy the result</h3>
-<button class="button button1">Got it!</button>
+    <div class="guide">
+        <div class="h1">
+            <h1>The guide</h1>
+        </div>
+            <div class="ps">
+                <h3>Step 1: paste the data you want to code <br> into the field on the next page</h3>
+                <h3>Step 2: click on "Generate" button <br> and enjoy the result</h3>
+            </div>
+                <a href="qrdata.html">
+                    <button class="button">Got it!</button>
+                </a>
+    </div>
 </body>
 </html>
