--- a/GeneratorQR/Olympia/css/style.css
+++ b/GeneratorQR/Olympia/css/style.css
@@ -1,36 +1,79 @@
 body {
-
      margin: 0;
      font-family: monospace;
      font-size: 14pt;
-     }
+}
+
+.home {
+      background-image: url("../media/smooth_bg.jpg");
+      background-color: #074f57;
+      background-size: cover;
+      image: url("../media/logo.png");
+}
 
 .guide {
      background-image: url("../media/highway_at_night.jpg");
      background-color: #074f57;
      background-size: cover;
-     }
+}
 
 .qrdata {
     background-image: url("../media/soft_green_bg.jpg");
     background-color: #074f57;
     background-size: cover;
-    }
+}
 
-.h1 {
+.bar1, .bar2, .bar3 {
+                    width: 37px;
+                    height: 6px;
+                    background-color: #000000;
+                    margin: 7px 0;
+                    transition: 0,5s;
+}
+
+.transform .bar1 {
+                 transform: translate(0, 11px) rotate(-45deg);
+}
+
+.transform .bar2 {
+                 opacity: 0;
+}
+
+.transform .bar3 {
+                 transform: translate(0, -11px) rotate(45deg);
+}
+
+.guide_hs {
     color: #D3D3D3;
     text-align: center;
     font-family: system-ui;
+    font-size: 15px
     }
 
-.ps{
+.guide_ps {
     color: #bab4a4;
     text-align: center;
     font-family: monospace;
-    font-size: 13pt;
-    }
+    font-size: 14pt;
+}
 
-     .button {
+.home_hs {
+         color: #3b3b3b;
+         text-align: center;
+         font-family: system-ui;
+         font-size: 14px
+}
+
+.container {
+           display: inline-block;
+           cursor: pointer;
+           margin: 4px 6px;
+           position: absolute;
+           top: 14px;
+           left: 19px;
+}
+
+     .guide_button {
      border: 1;
      color: white;
      background-color: #6EC175;
@@ -38,8 +81,25 @@ body {
      text-align: center;
      text-decoration: none;
      display: inline-block;
+     font-family: monospace;
      font-size: 18px;
-     margin: 50px 547px;
+     margin: 50px 535px;
      cursor: pointer;
 
-    }
+}
+
+
+     .home_button {
+     border: 1;
+     color: white;
+     background-color: #4e97c3;
+     padding: 3px 25px;
+     text-align: center;
+     text-decoration: none;
+     display: inline-block;
+     font-family: "Arial Black";
+     font-size: 17px;
+     margin: 50px 494px;
+     cursor: pointer;
+
+}
