--- a/GeneratorQR/Olympia/templates/homepage.html
+++ b/GeneratorQR/Olympia/templates/homepage.html
@@ -3,10 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Home page</title>
-    <link rel="stylesheet" href="css/homepage_style.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<h1>Home page</h1>
-<img src="logo.png" width="499" height="500">
+    <div class="home home_hs">
+        <h1>Welcome to our QR code machine!</h1>
+        <a href="guide.html">
+            <button class="home_button">Start!</button>
+        </a>
+        <div class="container" onclick="Function1(this)">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </div>
+
+        <script>
+            function Function1(x) {
+            x.classList.toggle("transform");
+            }
+        </script>
+    </div>
 </body>
 </html>
