--- a/GeneratorQR/Olympia/templates/guide.html
+++ b/GeneratorQR/Olympia/templates/guide.html
@@ -6,16 +6,16 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <div class="guide">
-        <div class="h1">
+    <div class="guide guide_hs">
+        <div class="guide_hs">
             <h1>The guide</h1>
         </div>
-            <div class="ps">
+            <div class="guide_ps">
                 <h3>Step 1: paste the data you want to code <br> into the field on the next page</h3>
                 <h3>Step 2: click on "Generate" button <br> and enjoy the result</h3>
             </div>
                 <a href="qrdata.html">
-                    <button class="button">Got it!</button>
+                    <button class="guide_button">Got it!</button>
                 </a>
     </div>
 </body>
