--- a/GeneratorQR/Olympia/templates/homepage.html
+++ b/GeneratorQR/Olympia/templates/homepage.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="home home_hs">
+        <img src="../media/logo.png" width="26%" height="26%">
         <h1>Welcome to our QR code machine!</h1>
         <a href="guide.html">
             <button class="home_button">Start!</button>
