--- a/GeneratorQR/Olympia/templates/guide.html
+++ b/GeneratorQR/Olympia/templates/guide.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="IBM868">
     <title>Guide</title>
-    <link rel="stylesheet" href="../css/style.css">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <div class="guide guide_hs">
@@ -15,7 +17,7 @@
                 <h3>Step 2: click on "Generate" button <br> and enjoy the result</h3>
             </div>
                 <a href="qrdata.html">
-                    <button class="guide_button">Got it!</button>
+                    <button class="guideBtn">Got it!</button>
                 </a>
     </div>
 </body>
