--- a/GeneratorQR/Olympia/templates/qrdata.html
+++ b/GeneratorQR/Olympia/templates/qrdata.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Making QR code</title>
-    <link rel="stylesheet" href="../css/style.css">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <div class="qrdata qrdata_hs">
