--- a/GeneratorQR/Olympia/templates/homepage.html
+++ b/GeneratorQR/Olympia/templates/homepage.html
@@ -11,7 +11,7 @@
     <div class="home home_hs logo">
         <img src="media/logo.png" class="logo">
         <h1>Welcome to our QR code machine!</h1>
-        <a href="guide.html">
+        <a href="guide/">
             <button class="homeBtn">Start!</button>
         </a>
         <div class="container" onclick="Function1(this)">
