--- a/GeneratorQR/Olympia/templates/guide.html
+++ b/GeneratorQR/Olympia/templates/guide.html
@@ -16,7 +16,7 @@
                 <h3>Step 1: paste the data you want to code <br> into the field on the next page</h3>
                 <h3>Step 2: click on "Generate" button <br> and enjoy the result</h3>
             </div>
-                <a href="qrdata.html">
+                <a href="../start/">
                     <button class="guideBtn">Got it!</button>
                 </a>
     </div>
