--- a/GeneratorQR/Olympia/templates/homepage.html
+++ b/GeneratorQR/Olympia/templates/homepage.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="home home_hs logo">
-        <img src="media/logo.png" class="logo">
+        <img src="../static/media/logo.png/" height="26%" width="26%">
         <h1>Welcome to our QR code machine!</h1>
         <a href="guide/">
             <button class="homeBtn">Start!</button>
