--- a/GeneratorQR/Olympia/templates/homepage.html
+++ b/GeneratorQR/Olympia/templates/homepage.html
@@ -1,30 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home page</title>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'style.css' %}">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block body %}
+
     <div class="home home_hs logo">
         <img src="../static/media/logo.png/" height="26%" width="26%">
         <h1>Welcome to our QR code machine!</h1>
         <a href="guide/">
             <button class="homeBtn">Start!</button>
         </a>
-        <div class="container" onclick="Function1(this)">
-            <div class="bar1"></div>
-            <div class="bar2"></div>
-            <div class="bar3"></div>
-        </div>
-
-        <script>
-            function Function1(x) {
-            x.classList.toggle("transform");
-            }
-        </script>
     </div>
-</body>
-</html>
+
+{% endblock %}
