--- a/GeneratorQR/Olympia/templates/base.html
+++ b/GeneratorQR/Olympia/templates/base.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <title>Absolute machine</title>
         <link rel="stylesheet" href="{% static 'style.css' %}">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     </head>
 
     <body>
