--- a/GeneratorQR/Olympia/templates/qrdata.html
+++ b/GeneratorQR/Olympia/templates/qrdata.html
@@ -4,17 +4,27 @@
 
     <div class="qrdata qrdata_hs">
         <h1>Start making your qrcode</h1>
-        <form method="post" enctype="multipart/form-data" action="" onsubmit="return gencode">
+        <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
             <label for="qrdata">Put data you want to code here:</label><br>
-            <input type="text" id="qrdata" name="qrdata" value="Example input"><br>
+            <input type="text" id="qrdata" name="gencode" value="Example input"><br>
 
             <label for="poll">Choose file format for your code</label><br>
             <input type="radio" id="jpg" name="fileFormat" value="jpg">
             <label for="jpg">.jpg</label><br>
             <input type="radio" id="png" name="fileFormat" value="png">
             <label for="png">.png</label><br>
+            <input id="submit" type="submit" onclick="gencode()" class="genBtn" value="Generate" />
         </form>
-        <input id="submit" type="submit" class="genBtn" value="Generate" />
+
+        <script>
+         def gencode() {
+            if request.method == 'POST':
+
+            return render(request, 'qrcode.html', {})
+         }
+        </script>
+
     </div>
 
 {% endblock %}
