--- a/GeneratorQR/Olympia/templates/qrdata.html
+++ b/GeneratorQR/Olympia/templates/qrdata.html
@@ -7,7 +7,7 @@
         <form action="../code/" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <label for="qrdata">Put data you want to code here:</label><br>
-            <input type="text" id="qrdata" name="gencode" value="Example input"><br>
+            <input type="text" id="qrdata" name="qrdata" value="Example input"><br>
 
             <!--
             <label for="poll">Choose file format for your code</label><br>
