--- a/GeneratorQR/Olympia/templates/qrcode.html
+++ b/GeneratorQR/Olympia/templates/qrcode.html
@@ -2,6 +2,9 @@
 
 {% block body %}
 
+    <div class="qrcode qrcode_hs">
+        <h1>You have been successfully redirected to this page!</h1>
+        <p>So now you can just enjoy this masterpiece =)</p>
+    </div>
 
-
-{% endblock %}}
+{% endblock %}
