--- a/GeneratorQR/Olympia/static/style.css
+++ b/GeneratorQR/Olympia/static/style.css
@@ -13,13 +13,12 @@ body {
 }
 
 .home {
-    margin: 0px;
+    size: cover;
     background-image: url("media/smooth_bg.jpg");
     background-color: #074f57;
     background-size: cover;
-    padding-top: 150px;
-    padding-bottom: 200px;
-
+    padding-top: 52px;
+    padding-bottom: 300px;
 }
 
 .guide {
@@ -33,7 +32,9 @@ body {
 
 .qrdata {
     size: cover;
-    background-image: url("media/soft_green_bg.jpg");
+    background-image: url("media/giulia_so_loved.jpg");
+    /*filter: blur(8px);
+    -webkit-filter: blur(8px);*/
     background-color: #074f57;
     background-size: cover;
     padding-top: 150px;
@@ -95,18 +96,21 @@ body {
 }
 
 .qrdata_hs {
-    color: #3b3b3b;
+    color: #fff;
     text-align: center;
     font-family: system-ui;
     font-size: 22px;
 }
 
 .qrcode_hs {
+    size: cover;
     color: #fff;
     text-align: center;
     font-family: monospace;
     font-size: 28px;
     padding-top: 135px;
+    position: absolute;
+    z-index: 2;
 }
 
 .container {
