--- a/GeneratorQR/Olympia/templates/qrcode.html
+++ b/GeneratorQR/Olympia/templates/qrcode.html
@@ -7,6 +7,7 @@
         <p>So now you can just enjoy this masterpiece =)</p>
         <h1>{{finalcode}}</h1>
         <img src="{{finalcode}}" width=26% height=26%>
+        <img src="../codes/{{name}}/" width=26% height=26%">
     </div>
 
 {% endblock %}
