--- a/GeneratorQR/Olympia/templates/qrcode.html
+++ b/GeneratorQR/Olympia/templates/qrcode.html
@@ -5,9 +5,9 @@
     <div class="qrcode qrcode_hs">
         <h1>You have been successfully redirected to this page!</h1>
         <p>So now you can just enjoy this masterpiece =)</p>
-        <h1>{{code1}}</h1>
+        <h1>{{path}}</h1>
         <img src="{{code1}}" width=26% height=26%>
-        <img src="../codes/{{name}}/" width=26% height=26%">
+        <img src="/sail.jpg" width=26% height=26%">
     </div>
 
 {% endblock %}
