--- a/GeneratorQR/Olympia/templates/qrcode.html
+++ b/GeneratorQR/Olympia/templates/qrcode.html
@@ -5,7 +5,7 @@
     <div class="qrcode qrcode_hs">
         <h1>You have been successfully redirected to this page!</h1>
         <p>So now you can just enjoy this masterpiece =)</p>
-        <h1>{{path}}</h1>
+        <h1>{{code1}}</h1>
         <img src="{{code1}}" width=26% height=26%>
         <img src="{{path}}" width=26% height=26%">
     </div>
