--- a/GeneratorQR/Olympia/templates/qrcode.html
+++ b/GeneratorQR/Olympia/templates/qrcode.html
@@ -7,7 +7,7 @@
         <p>So now you can just enjoy this masterpiece =)</p>
         <h1>{{code1}}</h1>
         <img src="{{code1}}" width=26% height=26%>
-        <img src="{{path}}" width=26% height=26%">
+        <img src="{{code1}}" width=26% height=26%">
     </div>
 
 {% endblock %}
