--- a/GeneratorQR/Olympia/templates/qrcode.html
+++ b/GeneratorQR/Olympia/templates/qrcode.html
@@ -3,13 +3,10 @@
 {% block body %}
 
     <div class="qrcode qrcode_hs">
-        <h1>You have been successfully redirected to this page!</h1>
-        <!--
-        <p>So now you can just enjoy this masterpiece =)</p>
-        -->
-        <h1>{{code1}}</h1>
+        <h1>Here is your code!</h1>
         <img src="{{code1}}" width=26% height=26%>
-        <img src="{{test_img}}" width=26% height=26%>
+
+        <a href={{code1}} download="{{name}}" class="downloadButton" type="button">Download</a>
     </div>
 
 {% endblock %}
