--- a/GeneratorQR/Olympia/static/style.css
+++ b/GeneratorQR/Olympia/static/style.css
@@ -1,44 +1,23 @@
-html {
-   margin: 0px;
-   height: 100%;
-   width: 100%;
-}
-
-body {
-     margin: 0;
-     font-family: monospace;
-     font-size: 14pt;
-     min-height: 100%;
-     width: 100%;
+body, html {
+    background-color: #fff5be;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    font-family: "Ubuntu Mono";
+    position: relative;
 }
 
 .home {
-    size: cover;
-    background-image: url("media/smooth_bg.jpg");
-    background-color: #074f57;
+    h1 {
+        font-size: 34px;
+        color: #330703;
+    }
+    margin: 0;
+    height: 1000px;
+    background-color: #fff5be;
     background-size: cover;
-    padding-top: 13px;
-    padding-bottom: 300px;
-}
-
-.guide {
-    size: cover;
-    background-image: url("media/highway_at_night.jpg");
-    background-color: #074f57;
-    background-size: cover;
-    padding-top: 150px;
-    padding-bottom: 158.9px;
-}
-
-.qrdata {
-    size: cover;
-    background-image: url("media/giulia_so_loved.jpg");
-    /*filter: blur(8px);
-    -webkit-filter: blur(8px);*/
-    background-color: #074f57;
-    background-size: cover;
-    padding-top: 150px;
-    padding-bottom: 216.7px;
+    text-align: left;
+    position: relative;
 }
 
 .qrcode {
@@ -56,7 +35,7 @@ body {
     height: 6px;
     background-color: #000000;
     margin: 7px 0;
-    transition: 1s;
+    transition: 0.85s;
 }
 
 .transform .bar1 {
@@ -64,57 +43,11 @@ body {
 }
 
 .transform .bar2 {
-                 opacity: 0;
+                 transform: translate(0,0.6px) rotate(45deg);
 }
 
 .transform .bar3 {
                  transform: translate(0, -12.6px) rotate(45deg);
-}
-
-
-.guide_hs {
-    color: #D3D3D3;
-    text-align: center;
-    font-family: system-ui;
-    font-size: 15px
-    }
-
-.guide_ps {
-    color: #bab4a4;
-    text-align: center;
-    font-family: monospace;
-    font-size: 14pt;
-}
-
-.home_hs {
-    color: #3b3b3b;
-    font-family: system-ui;
-    font-size: 14px;
-    margin: 0px;
-    height: 100%;
-    width: 100%;
-}
-
-.qrdata_hs {
-    color: #fff;
-    text-align: center;
-    font-family: system-ui;
-    font-size: 22px;
-}
-
-.qrcode_hs {
-    size: cover;
-    color: #fff;
-    text-align: center;
-    font-family: monospace;
-    font-size: 28px;
-    padding-top: -50px;
-}
-
-.form_config {
-    margin-left: 20px;
-    text-align: left;
-    padding-left: 20px;
 }
 
 .container {
@@ -126,53 +59,24 @@ body {
            left: 19px;
 }
 
-.guideBtn {
-     border: 1;
-     color: white;
-     background-color: #6EC175;
-     padding: 12px 30px;
-     text-align: center;
-     text-decoration: none;
-     display: inline-block;
-     font-family: monospace;
-     font-size: 18px;
-     border-radius: 4px;
-     margin: 50px 535px;
-     cursor: pointer;
-}
-
-.homeBtn {
-     border: 1;
-     color: white;
-     background-color: #4e97c3;
-     padding: 3px 25px;
-     text-decoration: none;
-     display: inline-block;
-     font-family: "Arial Black";
-     font-size: 17px;
-     border-radius: 4px;
-     margin: 50px 494px;
-     cursor: pointer;
-}
-
 .genBtn {
     border: 1;
     color: white;
-    background-color: #60d1d4;
-    padding: 4px 24px;
+    background-color: #4399de;
+    padding: 5.5px 22.5px;
     text-decoration: none;
     display: inline-block;
-    font-family: monospace;
-    font-size: 16px;
+    font-family: "Ubuntu Mono";
+    font-size: 19.5px;
     border-radius: 4px;
-    margin: 41px 493px;
-    cursor: pointer;
+    margin: 15px 0px;
+    cursor: crosshair;
 }
 
 .downloadBtn {
     border: 1;
     color: white;
-    background-color: #caff33;
+    background-color: #5cb85c;
     padding: 5px 22px;
     text-decoration: none;
     display: inline-block;
