--- a/GeneratorQR/Olympia/templates/homepage.html
+++ b/GeneratorQR/Olympia/templates/homepage.html
@@ -4,7 +4,7 @@
 
         <div style="position: relative;" class="home">
             <form style="position: relative; margin-top: 127px;
-                left: 68px; z-index:1;" method="POST" enctype="multipart/form-data">
+                left: 68px; z-index:1;" action="../code/" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 <h1 style="position: relative; margin-top: 110px; left: 68px; z-index:1;" >Create your QR Code!</h1>
 
@@ -26,11 +26,21 @@
 
                 <input id="submit" type="submit" class="genBtn" value="Generate" />
 
+                {% if views.code1|length > 10 %}
+
                 <img src="{{code1}}" alt="QQR code" style="position: relative;
                     margin-top: -320px; left: 570px; z-index:1;">
                 <a href={{code1}} download="{{name}}" style="position: relative;
                     margin-top: -200px; left: 250px; z-index:1;"
                 class="downloadBtn" type="download">Download</a>
+
+                {% else %}
+
+                <img src="../static/codes/Hello.jpg" style="position: relative;
+                    margin-top: -320px; left: 570px; z-index:1;">
+
+                {% enif %}
+
             </form>
         </div>
 
