--- a/GeneratorQR/Olympia/templates/homepage.html
+++ b/GeneratorQR/Olympia/templates/homepage.html
@@ -26,7 +26,7 @@
 
                 <input id="submit" type="submit" class="genBtn" value="Generate" />
 
-                {% if views.code1|length > 10 %}
+                <!--{% if data_check %}-->
 
                 <img src="{{code1}}" alt="QQR code" style="position: relative;
                     margin-top: -320px; left: 570px; z-index:1;">
@@ -34,12 +34,12 @@
                     margin-top: -200px; left: 250px; z-index:1;"
                 class="downloadBtn" type="download">Download</a>
 
-                {% else %}
+                <!--{% else %}-->
 
                 <img src="../static/codes/Hello.jpg" style="position: relative;
                     margin-top: -320px; left: 570px; z-index:1;">
 
-                {% enif %}
+                <!--{% endif %}-->
 
             </form>
         </div>
