--- a/GeneratorQR/Olympia/templates/base.html
+++ b/GeneratorQR/Olympia/templates/base.html
@@ -9,18 +9,23 @@
     </head>
 
     <body>
+    <div id="sidebar">
         <div class="container" onclick="Function1(this)">
             <div class="bar1"></div>
             <div class="bar2"></div>
             <div class="bar3"></div>
         </div>
-
+        <ul>
+            <li>home</li>
+            <li>contacts</li>
+            <li>about us</li>
+        </ul>
+    </div>
         <script>
             function Function1(x) {
             x.classList.toggle("transform");
             }
         </script>
-
         {% block body %}
 
         {% endblock %}
