--- a/GeneratorQR/Olympia/static/style.css
+++ b/GeneratorQR/Olympia/static/style.css
@@ -1,5 +1,5 @@
 body, html {
-    background-color: #fff5be;
+    background-color: #e7ebed;
     margin: 0;
     width: 100%;
     height: 100%;
@@ -16,7 +16,7 @@ body, html {
     margin: 0;
     min-height: 100%;
     height: 1000px;
-    background-color: #fff5be;
+    background-color: #e7ebed;
     background-size: cover;
     text-align: left;
     position: absolute;
@@ -33,6 +33,32 @@ body, html {
     width: 100%;
 }
 
+/*#sidebar {
+    position: absolute;
+    width: 300px;
+    height: 100%;
+    background: #000;
+    left: -300px;
+    transition: .4s;
+}
+
+#sidebar ul li {
+    list-style: none;
+    color: #fff;
+    font-size: 20px;
+    padding: 26px 24px;
+}
+
+#sidebar.active {
+    left: 0;
+}
+
+#sidebar .bar1, bar2, bar3 {
+    position: absolute;
+    top: 30px;
+    left: 330px;
+}*/
+
 .bar1, .bar2, .bar3 {
     width: 37px;
     height: 6px;
@@ -42,24 +68,24 @@ body, html {
 }
 
 .transform .bar1 {
-                 transform: translate(0, 12.6px) rotate(-45deg);
+    transform: translate(0, 12.6px) rotate(-45deg);
 }
 
 .transform .bar2 {
-                 transform: translate(0,0.6px) rotate(45deg);
+    transform: translate(0,0.6px) rotate(45deg);
 }
 
 .transform .bar3 {
-                 transform: translate(0, -12.6px) rotate(45deg);
+    transform: translate(0, -12.6px) rotate(45deg);
 }
 
 .container {
-           display: inline-block;
-           cursor: pointer;
-           margin: 4px 6px;
-           position: absolute;
-           top: 14px;
-           left: 19px;
+    display: inline-block;
+    cursor: pointer;
+    margin: 4px 6px;
+    position: absolute;
+    top: 14px;
+    left: 19px;
 }
 
 .genBtn {
