--- a/GeneratorQR/Olympia/templates/homepage.html
+++ b/GeneratorQR/Olympia/templates/homepage.html
@@ -31,12 +31,12 @@
                 <img src="{{code1}}" alt="QQR code" style="position: absolute;
                     top: 0px; left: 650px; z-index:1;">
                 <a href={{code1}} download="{{name}}" style="position: relative;
-                    margin-top: -200px; left: 250px; z-index:1;"
+                    top: 35px; left: 50px; z-index:1;"
                 class="downloadBtn" type="download">Download</a>
 
                 {% else %}
 
-                <h1 style="position: absolute; top: 90px; left: 68px; z-index:1;">Code example:</h1>
+                <h1 style="position: absolute; top: -100px; left: 679px; z-index:1;">Code example:</h1>
                 <img src="../static/codes/Hello.jpg" style="position: absolute;
                     top: 0px; left: 680px; z-index:1;">
 
