--- a/GeneratorQR/Olympia/templates/base.html
+++ b/GeneratorQR/Olympia/templates/base.html
@@ -9,17 +9,32 @@
     </head>
 
     <body>
+        <!--<div id="sidebar">
+            <div class="toggle-btn" onclick ="show()">
+                <span></span>
+                <span></span>
+                <span></span>
+
+            </div>
+
+            <ul>
+                <li>About</li>
+                <li>Credits</li>
+                <li>Contacts</li>
+            </ul>
+
+            <script>
+                function show() {
+                    document.getElementById('sidebar').classList.toggle('active');
+                }
+            </script>-->
+
     <div id="sidebar">
         <div class="container" onclick="Function1(this)">
             <div class="bar1"></div>
             <div class="bar2"></div>
             <div class="bar3"></div>
         </div>
-        <ul>
-            <li>home</li>
-            <li>contacts</li>
-            <li>about us</li>
-        </ul>
     </div>
         <script>
             function Function1(x) {
